<resources>
    <!-- App name -->
    <string name="app_name">Pilnuj Grosza</string>

    <!-- Main menu part -->
...

    <!-- Preference Titles -->
    <string name="title_activity_settings">Ustawienia</string>
    <string name="title_activity_budget">Budżet</string>
    <string name="title_activity_shopping">Zakupy</string>
...
    <string name="title_activity_expenses_list">Lista wydatków</string>
    <string name="title_activity_income_list">Lista przychodów</string>
    <string name="title_activity_receipt">Paragony</string>
    <string name="title_activity_shopping_list">Listy zakupów</string>

    <!-- Preference Titles -->
...
    <string name="profile_editform_submit_QandA">Zmień pytanie i odpowiedź pomocniczą</string>
    <string name="profile_fab_tooltip_addProfile">Utwórz profil</string>
    <string name="mainmenu_addIncome_button">Dodaj przychód</string>
    <string name="mainmenu_addExpense_button">Dodaj wydatek</string>
    <string name="mainmenu_finMgmt_button">Zarządzanie finansami</string>
    <string name="mainmenu_addReceipt_button">Dodaj paragon</string>
    <string name="mainmenu_addShoppingList_button">Dodaj listę zakupów</string>
    <string name="mainmenu_shoppingLists_button">Listy zakupów</string>
    <string name="mainmenu_profiles_button">Wyloguj się</string>
    <string name="mainmenu_settings_button">Ustawienia</string>
    <string name="mainmenu_receiptsList_button">Paragony</string>
    <string name="prof_rc_secondLine">Description</string>
    <string name="prof_rc_firstLine">Example</string>
...
    <string name="exp_rc_secondLine">Description</string>
    <string name="inc_rc_secondLine">Description</string>
    <string name="inc_rc_firstLine">Example</string>
    <string name="budget_statistics_button">Statystyki</string>
    <string name="finmgmt_calendar_button">Kalendarz</string>
...
    <string name="finmgmt_budgetmenu_button">Menu budżetów</string>
    <string name="finmgmt_statistics_button">Statystyki</string>
    <string name="finmgmt_transactionsList_button">Transakcje</string>
    <string name="trans_fab_addIncome">Dodaj przychód</string>
    <string name="trans_fab_addExpense">Dodaj wydatek</string>
    <string name="finmgmt_inccat_button">Kategorie przychodów</string>
...
    <string name="inccat_editform_submit">Zmień nazwę kategorii przychodów</string>
    <string name="finmgmt_feeSchedule_button">Harmonogram opłat</string>
    <string name="income_create_info_login">Tworzenie przychodu</string>
    <string name="income_createform_text_value">Wartość przychodu</string>
    <string name="income_createform_submit">Utwórz przychód</string>
    <string name="income_createform_text_desc">Opis przychodu</string>
    <string name="expense_create_info_login">Tworzenie wydatku</string>
    <string name="expense_createform_text_value">Wartość wydatku</string>
    <string name="expense_createform_text_desc">Opis wydatku</string>
    <string name="expense_createform_submit">Utwórz wydatek</string>
    <string name="title_activity_financeManagement">Zarządzanie finansami</string>
    <string name="title_activity_income_category">Kategorie przychodów</string>
    <string name="title_activity_transaction">Lista transakcji</string>
...
    <string name="expense_deleteform_confirmation_info">Czy na pewno chcesz<br /> usunąć tę transakcję?</string>
    <string name="income_editform_info_login">Edycja przychodu</string>
    <string name="income_editform_text_value">Wartość przychodu</string>
    <string name="income_editform_text_desc">Opis przychodu</string>
    <string name="income_editform_spin_cat_info">Kategoria:</string>
    <string name="income_editform_checkbox_budget">Zaliczany do budżetu</string>
    <string name="income_editform_spin_budget_info">Budżet:</string>
    <string name="income_editform_checkbox_budgetInitialAmount">Zmienia limit budżetu</string>
    <string name="income_editform_submitEdit">Edytuj przychód</string>
    <string name="income_editform_submitDelete">Usuń przychód</string>
    <string name="income_delete_info_login">Usuwanie przychodu</string>
    <string name="income_deleteform_spin_cat_info">Kategoria:</string>
    <string name="income_deleteform_spin_budget_info">Budżet:</string>
    <string name="income_deleteform_confirmation_info">Czy na pewno chcesz<br /> usunąć tę transakcję?</string>
    <string name="income_deleteform_submitDelete">Usuń przychód</string>
    <string name="income_deleteform_cont_confirmation_info">Czy chcesz zmniejszyć limit budżetu o wartość tej transakcji?</string>
    <string name="income_deleteform_cont_submitChange">Tak</string>
...
    <string name="schpay_create_transaction_confirmation_info">Czy na pewno<br /> chcesz utworzyć transakcję?</string>
    <string name="schpay_create_transaction_submit">Utwórz transakcję</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="stat_description_info">Dla jakiego okresu chcesz uzyskać dane?</string>
...
    <string name="sholist_rc_currency">zł</string>
    <string name="sholist_rc_num_of_prod">1</string>
    <string name="sholist_create_info_login">Tworzenie listy zakupów</string>
    <string name="sholist_createform_text_name">Nazwa listy zakupów</string>
    <string name="sholist_createform_submit">Utwórz listę zakupów</string>
...
    <string name="title_activity_phone_images_gallery">Wybierz obraz</string>
    <string name="title_activity_receiptimage">Zdjęcie paragonu</string>
    <string name="receipt_create_menu_info">Tworzenie paragonu</string>
    <string name="receipt_create_menu_newImageFromCamera">Nowe zdjęcie z aparatu</string>
    <string name="receipt_create_menu_newImageFromFile">Nowe zdjęcie z pliku</string>
...
    <string name="schpay_createschpay_date_error_badDate">Płatność musi zostać zaplanowana w dniu późniejszym niż dziś.</string>
    <string name="schpay_createschpay_value_error_empty">Podaj wartość płatności.</string>
    <string name="income_createincome_value_error_empty">Podaj wartość przychodu.</string>
    <string name="expense_createexpense_value_error_empty">Podaj wartość wydatku.</string>
    <string name="receipt_createreceipt_name_error_empty">Podaj nazwę paragonu.</string>
...
