...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="pl.dchruscinski.pilnujgrosza.Transaction">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transaction_list_rc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="match_parent"
...
