...
            android:textStyle="bold"
            android:text="@string/income_create_info_login"
            android:singleLine="true" >
        </TextView>

        <TextView
            android:id="@+id/income_createform_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="24dp"
            android:layout_below="@+id/income_createform_info_create"
            android:drawableStart="@drawable/baseline_today_24"
...
